# CS2006Practical4

./: .~lock.Haskell2report.odt#  Gomoku.cabal  Gomoku.cabal.txt  Haskell2report.odt  README.md  protocol  save  text.txt
assets/: black.xcf  board.xcf  hint.xcf  white.xcf
src/: #AI.hs#  #Args.hs#  #Args.hs#~  #Board.hs#  #Client.hs#  #ClientPlay.hs#  #Input.hs#  #Main.hs#  #Server.hs#  .#AI.hs  .#Client.hs  .#Input.hs  .#Main.hs  .#Server.hs  AI.hs  Args.hs  Board.hs  Client.hs  Client.hs~  Data.hs  Draw.hs  Input.hs  Main.hs  Params.hs  Server.hs  Server.hs~  Utils.hs  src.cabal
