name:                Gomoku
version:             0.1.0.0
synopsis:            Gomoku (5-in-a-row) game
-- description:
homepage:            http://studres.cs.st-andrews.ac.uk/CS2006-APP
author:              Edwin Brady
maintainer:          ecb10@st-andrews.ac.uk
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable gomoku
  main-is:             Main.hs
  Other-modules:       Board, Input, Draw, AI
  build-depends:       base >=4.6 && <4.10,
                       gloss,
                       random-extras,
                       network-simple,
                       stm,
                       network,
                       binary,
                       bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010

executable client
  main-is:             Client.hs
  Other-modules:       Board, Input, Draw, AI
  build-depends:       base >=4.6 && <4.10,
                       gloss,
                       random-extras,
                       network-simple,
                       stm,
                       network,
                       binary,
                       bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010

executable server
  main-is:             Server.hs
  Other-modules:       Board, Input, Draw, AI
  build-depends:       base >=4.6 && <4.10,
                       gloss,
                       random-extras,
                       network-simple,
                       stm,
                       network,
                       binary,
                       bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010